# VikerKit

./: .gitattributes  .gitignore  AGENT.md  Cargo.toml  LICENSE  Package.swift  README.md  copy-cormac.sh  missing_vim_bindings.md
crates/viker-core/: Cargo.toml
crates/viker-core/src/: config.rs  formatter.rs  git.rs  key.rs  language.rs  lib.rs  search.rs  vim.rs
crates/viker-core/src/editor/: display.rs  mod.rs  pane.rs  selection.rs  view.rs  wrap.rs
crates/viker-core/src/highlight/: mod.rs  style.rs  theme.rs
crates/viker-core/src/input/: command.rs  mod.rs  mode.rs
crates/viker-core/src/lsp/: mod.rs
crates/viker-core/tests/: editor_tests.rs  formatter_tests.rs  git_tests.rs  highlight_tests.rs  language_tests.rs  lsp_parse_tests.rs  search_tests.rs
crates/viker-egui/: Cargo.toml
crates/viker-egui/examples/: embedded_markdown.rs
crates/viker-egui/src/: gui_app.rs  lib.rs  main.rs
crates/viker-egui/src/gui/: code_actions.rs  command_line.rs  completion.rs  diagnostics.rs  editor_view.rs  file_finder.rs  git_diff.rs  hover.rs  mod.rs  project_sidebar.rs  references.rs  status_line.rs  tab_bar.rs  workspace_symbols.rs
crates/viker-swift/: Cargo.toml  README.md  uniffi.toml
crates/viker-swift/src/: lib.rs
crates/viker-tui/: Cargo.toml
crates/viker-tui/src/: app.rs  main.rs
crates/viker-tui/src/ui/: code_actions.rs  command_line.rs  completion.rs  diagnostics.rs  editor_view.rs  file_finder.rs  git_diff.rs  hover.rs  mod.rs  references.rs  status_line.rs  tab_bar.rs  workspace_symbols.rs
crates/viker-vim/: Cargo.toml
crates/viker-vim/src/: editor_adapter.rs  keymap.rs  lib.rs  vim.rs
crates/viker-vim/tests/: vim_core_tests.rs
docs/: recent-changes.md  viker-guide.md  wasm-typescript.md
scripts/: build-viker-swift-xcframework.sh  set-viker-version.sh
swift/Example/: Package.swift  README.md
swift/Example/Sources/VikerExample/: VikerExampleApp.swift  VikerExampleEditor.swift  VikerExampleStyle.swift
swift/VikerKit/: .gitignore  Package.swift  README.md
swift/VikerKit/Sources/CLibgit2/: module.modulemap
swift/VikerKit/Sources/VikerKit/: VikerKit.swift  VikerKitNativeDependencies.swift
swift/VikerKit/Sources/VikerKit/AppKit/: VikerEditorAutosuggestions.swift  VikerEditorComponent.swift  VikerEditorComponentStyle.swift
swift/VikerKit/VikerKitFFI.xcframework/: Info.plist
swift/VikerKit/VikerKitFFI.xcframework/ios-arm64-simulator/Headers/: VikerKitFFI.h
swift/VikerKit/VikerKitFFI.xcframework/ios-arm64/Headers/: module.modulemap
