[workspace]
members = [
    "crates/viker-core",
    "crates/viker-vim",
    "crates/viker-swift",
    "crates/viker-egui",
    "crates/viker-tui",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
crossterm = { version = "0.29", features = ["event-stream"] }
eframe = "0.31"
egui = "0.31"
futures = "0.3"
git2 = { version = "0.20", default-features = false }
ignore = "0.4.25"
ratatui = { version = "0.30", features = ["crossterm"] }
regex = "1"
rfd = "0.17.2"
ropey = "1.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
skim = { version = "4.6.2", default-features = false }
streaming-iterator = "0.1"
tokio = { version = "1", features = ["full"] }
tree-sitter = "0.26"
tree-sitter-bash = "0.25.1"
tree-sitter-css = "0.25.0"
tree-sitter-fish = "3.6.0"
tree-sitter-html = "0.23.2"
tree-sitter-javascript = "0.25.0"
tree-sitter-md = "0.5.3"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23.2"
tree-sitter-zsh = "0.63.3"
unicode-width = "0.2"
uniffi = "0.31.1"
