[package]
name = "viker-core"
description = "Frontend-neutral editor, buffer, language, LSP, highlighting, and formatting core for Viker."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clipboard-rs.workspace = true
git2.workspace = true
ignore.workspace = true
regex.workspace = true
ropey.workspace = true
serde.workspace = true
serde_json.workspace = true
skim.workspace = true
streaming-iterator.workspace = true
tokio.workspace = true
tree-sitter.workspace = true
tree-sitter-bash.workspace = true
tree-sitter-css.workspace = true
tree-sitter-fish.workspace = true
tree-sitter-html.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-md.workspace = true
tree-sitter-python.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-zsh.workspace = true
unicode-width.workspace = true
