[package]
name = "viker-swift"
description = "UniFFI Swift bindings and iOS packaging surface for Viker."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow.workspace = true
viker-core = { path = "../viker-core" }
viker-vim = { path = "../viker-vim" }
serde_json.workspace = true
tokio.workspace = true
uniffi = { workspace = true, features = ["cli"] }

[lib]
name = "viker_swift"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "uniffi-bindgen-swift"
path = "src/bin/uniffi-bindgen-swift.rs"
