[package]
name = "viker-tui"
description = "Terminal frontend for Viker."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
crossterm.workspace = true
futures.workspace = true
ratatui.workspace = true
viker-core = { path = "../viker-core" }
viker-vim = { path = "../viker-vim" }
serde_json.workspace = true
tokio.workspace = true
unicode-width.workspace = true

[lib]
name = "viker_tui"
path = "src/lib.rs"

[[bin]]
name = "viker"
path = "src/main.rs"
