[package]
name = "viker-vim"
description = "Vim keybinding state machine for Viker."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
regex.workspace = true
ropey.workspace = true
viker-core = { path = "../viker-core" }
